--- a/app/views/media_entries/show_relations.html.haml
+++ b/app/views/media_entries/show_relations.html.haml
@@ -1,15 +1,4 @@
-- unless @get.published?
-  - flash[:warning] = 'Entry is not published yet!'
-  = render('media_entries/_show/unpublished_header')
-
-:ruby
-  tag_mods = ['small','ellipsed']
-  entry_show = {}
-  entry_show[:header] = render('media_entries/_show/resource_header')
-
-- entry_show[:tabs] = render('media_entries/_show/tab_nav')
-
-- entry_show[:overview] = capture_haml do
+- content_for(:overview) do
   %h3.title-l.separated.mbm
     = "Relations"
   - unless @get.relations.any?
@@ -20,6 +9,4 @@
     %h4.title-m.mbm= "Siblings"
     = deco('polybox', media_resources: @get.relations.sibling_media_resources)
 
-
-
-= deco('resource_show', entry_show)
+= render template: 'media_entries/_show/_base'
