--- a/app/ui_elements/decorators/thumbnails/collection_index.haml
+++ b/app/ui_elements/decorators/thumbnails/collection_index.haml
@@ -11,7 +11,7 @@
       title: get.title#,
       # subtitle: 'TODO'
     },
-    badge_top_left: component('privacy-icon', status: get.privacy_status)
+    badge_top_left: deco('privacy-status-icon', get: get)
   }
 
 = component('thumbnail', thumb)
