--- a/app/ui_elements/decorators/thumbnails/media_entry_index.haml
+++ b/app/ui_elements/decorators/thumbnails/media_entry_index.haml
@@ -12,7 +12,7 @@
       title: get.title,
       subtitle: get.authors
     },
-    badge_top_left: component('privacy-icon', status: get.privacy_status)
+    badge_top_left: deco('privacy-status-icon', get: get)
   }
 
 = component('thumbnail', thumb)
