--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -1,15 +1,13 @@
-- action_buttons = capture_haml do
-  = component('button.primary',
-    link: permissions_media_entry_path(@get.uuid),
-    text: 'Permissions')
-  = component('button',
-    link: media_entry_path,
-    method: :delete,
-    data: { confirm: 'Are you sure you want to delete this?' }) do
-    = component('icon.trash')
-
+:ruby
+  action_buttons = [
+    component('button',
+      link: media_entry_path,
+      icon: :trash,
+      method: :delete,
+      data: { confirm: 'Are you sure you want to delete this?' })
+  ]
 
 = component('page-header',
     icon: component('icon.media-entry'),
     text: @get.title,
-    actions: [action_buttons])
+    actions: action_buttons)
