--- a/app/ui_elements/decorators/vocabulary_meta_data_list.haml
+++ b/app/ui_elements/decorators/vocabulary_meta_data_list.haml
@@ -21,7 +21,7 @@
 
       -# TMP for edit POC. text only!
       - is_editable = false unless (key.type == 'MetaDatum::Text')
-      - react_editor = is_editable && { react_class: 'MetaDatumEdit',
+      - react_editor = is_editable && { react_elm: 'MetaDatumEdit',
                          meta_datum: { editable: is_editable, url: url } }
       %dl.media-data.mbs{data: react_editor}
 
