ui: RightsManagment: add subjects, use router

--- a/app/views/media_entries/permissions_edit.html.haml
+++ b/app/views/media_entries/permissions_edit.html.haml
@@ -1,133 +1,2 @@
-- get = @get.permissions
-
-- content_for(:overview) do
-  = form_tag permissions_media_entry_path(get.uuid), method: :put do
-    .row
-      %h3.title-l.col1of2
-        Responsible user
-      .col1of2= get.responsible.name
-    .row
-      %h3.title-l.col1of2
-        Your permissions
-      .col1of2= get.current_user_permissions
-
-    %hr
-    .row
-      %h3.title-l.col1of2
-        Permissions
-
-    .row.separated
-      %h3.title-m.col2of6
-        Users
-      .col1of6.title-s
-        get_metadata_and_previews
-      .col1of6.title-s
-        get_full_size
-      .col1of6.title-s
-        edit_metadata
-      .col1of6.title-s
-        edit_permissions
-    .mts
-      - get.user_permissions.each do |p|
-        .row
-          -# because of how the Params parser works, an array can not start with a hash:
-          %input{name: 'media_entry[user_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-          %input{name: 'media_entry[user_permissions][][subject][uuid]', value: p.subject.uuid, hidden: true}
-          .col2of6.title-s= p.subject.name
-          .col1of6.title-s
-            = check_box_tag 'media_entry[user_permissions][][get_metadata_and_previews]', 'true', p.get_metadata_and_previews
-          .col1of6.title-s
-            = check_box_tag 'media_entry[user_permissions][][get_full_size]', 'true', p.get_full_size
-          .col1of6.title-s
-            = check_box_tag 'media_entry[user_permissions][][edit_metadata]', 'true', p.edit_metadata
-          .col1of6.title-s
-            = check_box_tag 'media_entry[user_permissions][][edit_permissions]', 'true', p.edit_permissions
-      .row
-        -# because of how the Params parser works, an array can not start with a hash:
-        %input{name: 'media_entry[user_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-        .col2of6.title-s
-          %input{name: 'media_entry[user_permissions][][subject][uuid]'}
-        .col1of6.title-s
-          = check_box_tag 'media_entry[user_permissions][][get_metadata_and_previews]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[user_permissions][][get_full_size]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[user_permissions][][edit_metadata]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[user_permissions][][edit_permissions]', 'true', false
-
-    %br
-    .row.separated
-      %h3.title-m
-        Groups
-    .mts
-      - get.group_permissions.each do |p|
-        .row
-          -# because of how the Params parser works, an array can not start with a hash:
-          %input{name: 'media_entry[group_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-          %input{name: 'media_entry[group_permissions][][subject][uuid]', value: p.subject.uuid, hidden: true}
-          .col2of6.title-s= p.subject.name
-          .col1of6.title-s
-            = check_box_tag 'media_entry[group_permissions][][get_metadata_and_previews]', 'true', p.get_metadata_and_previews
-          .col1of6.title-s
-            = check_box_tag 'media_entry[group_permissions][][get_full_size]', 'true', p.get_full_size
-          .col1of6.title-s
-            = check_box_tag 'media_entry[group_permissions][][edit_metadata]', 'true', p.edit_metadata
-          .col1of6.title-s= "—"
-      .row
-        -# because of how the Params parser works, an array can not start with a hash:
-        %input{name: 'media_entry[group_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-        .col2of6.title-s
-          %input{name: 'media_entry[group_permissions][][subject][uuid]'}
-        .col1of6.title-s
-          = check_box_tag 'media_entry[group_permissions][][get_metadata_and_previews]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[group_permissions][][get_full_size]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[group_permissions][][edit_metadata]', 'true', false
-        .col1of6.title-s= "—"
-
-    %br
-    .row.separated
-      %h3.title-m
-        API Clients
-    .mts
-      - get.api_client_permissions.each do |p|
-        -# because of how the Params parser works, an array can not start with a hash:
-        %input{name: 'media_entry[api_client_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-        .row
-          %input{name: 'media_entry[api_client_permissions][][subject][uuid]', value: p.subject.uuid, hidden: true}
-          .col2of6.title-s= p.subject.login
-          .col1of6.title-s
-            = check_box_tag 'media_entry[api_client_permissions][][get_metadata_and_previews]', 'true', p.get_metadata_and_previews
-          .col1of6.title-s
-            = check_box_tag 'media_entry[api_client_permissions][][get_full_size]', 'true', p.get_full_size
-          .col1of6.title-s= "—"
-          .col1of6.title-s= "—"
-      .row
-        -# because of how the Params parser works, an array can not start with a hash:
-        %input{name: 'media_entry[api_client_permissions][][params_fix]', value: 'ignore_this', hidden: true}
-        .col2of6.title-s
-          %input{name: 'media_entry[api_client_permissions][][subject][uuid]'}
-        .col1of6.title-s
-          = check_box_tag 'media_entry[api_client_permissions][][get_metadata_and_previews]', 'true', false
-        .col1of6.title-s
-          = check_box_tag 'media_entry[api_client_permissions][][get_full_size]', 'true', false
-        .col1of6.title-s= "—"
-        .col1of6.title-s= "—"
-
-    %br
-    .row.separated
-      %h3.col2of6.title-m
-        Public
-      .col1of6.title-s
-        = check_box_tag 'media_entry[public_permission][get_metadata_and_previews]', 'true', get.public_permission.get_metadata_and_previews
-      .col1of6.title-s
-        = check_box_tag 'media_entry[public_permission][get_full_size]', 'true', get.public_permission.get_full_size
-      .col1of6.title-s= "—"
-      .col1of6.title-s= "—"
-
-    %br
-    = submit_tag 'submit', class: 'primary-button'
-
-= render template: 'media_entries/_show/_base'
+-# No static fallback, but pre-renders form
+= render template: 'media_entries/permissions'
