--- a/app/views/application/_user_menu.haml
+++ b/app/views/application/_user_menu.haml
@@ -14,4 +14,4 @@
 = form_tag sign_out_path do
   = component('button.tertiary') do
     = component('icon.power-off')
-    = 'Log Out'
+    = t(:user_menu_logout_btn)
